# PureMLinC

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: publish.yml
csrc/: Makefile
csrc/include/: core.h  linear.h  logistic.h  ml.h
csrc/src/: core.c  linreg.c  logreg.c
examples/: linear_regression.py  logistic_regression.py
python/ml_core/: __init__.py  _lib.py  linreg.py  logreg.py
